# robot_ros2_ws

./: .gitignore  PAPER_REPORT.md  README.md  upload_mega.sh  upload_mega_motor_test.sh
firmware/arduino_mega_base/: README.md  arduino_mega_base.ino
firmware/mega_motor_test/: mega_motor_test.ino
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: localization.yaml  rplidar.yaml  serial_bridge.yaml  slam.yaml  usb_cam.yaml
src/robot_bringup/launch/: autonomous_mapping.launch.py  laptop_monitor.launch.py  lidar.launch.py  pi_localization.launch.py  pi_mapping.launch.py  pi_perception.launch.py  pi_sensors.launch.py  rplidar.launch.py  virtual_robot.launch.py
src/robot_bringup/rviz/: robot.rviz
src/robot_bringup/scripts/: map_auto_saver.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: robot.urdf.xacro
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: BaseControllerStatus.msg  BottleArray.msg  BottleDetection.msg  PickResult.msg  TargetBottle.msg
src/robot_interfaces/srv/: PickBottle.srv
src/robot_localization_pkg/: package.xml  setup.cfg  setup.py
src/robot_localization_pkg/robot_localization_pkg/: wheel_odom_node.py
src/robot_mission/: package.xml  setup.cfg  setup.py
src/robot_mission/resource/: robot_mission
src/robot_navigation/: package.xml  setup.cfg  setup.py
src/robot_serial_bridge/: package.xml  setup.cfg  setup.py
src/robot_serial_bridge/resource/: robot_serial_bridge
src/robot_serial_bridge/robot_serial_bridge/: mega_bridge_node.py  packet_builder.py  packet_parser.py
src/robot_vision/: README.md  package.xml  setup.cfg  setup.py
src/robot_vision/config/: vision.yaml
src/robot_vision/launch/: detection.launch.py
src/robot_vision/models/: README.md
src/robot_vision/robot_vision/: __init__.py  bottle_detector_node.py  detection_tracker.py  ground_projection.py  usb_camera_node.py  vision_node.py
src/robot_vision/test/: test_ground_projection.py  test_tracking.py
src/vacuum_driver/: README.md  package.xml  setup.py
src/vacuum_driver/config/: real_hardware.yaml  slam.yaml
src/vacuum_driver/rviz/: mapping.rviz
tools/: bluetooth_motor_test.py
(+7 files in other folders)
