<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>robot_mission</name>
	<version>0.0.1</version>
	<description>Mission orchestration and autonomy nodes</description>

	<maintainer email="hailinh13092006@gmail.com">linh-pham</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<depend>rclpy</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>slam_toolbox</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
